.github/task31-final-persistence-diagnostic-result.txt
result=FAIL
source_head=83c45cd7984ecfe0670e956bbdff98e4c2d7308a
patch_status=0
install_status=0
pytest_status=2
compile_status=0
whitespace_status=0
--- patch tail ---
--- pytest tail ---

==================================== ERRORS ====================================
____ ERROR collecting tests/unit/test_protocol_v3_pipeline_final_report.py _____
/opt/hostedtoolcache/Python/3.12.13/x64/lib/python3.12/site-packages/_pytest/python.py:508: in importtestmodule
    mod = import_path(
/opt/hostedtoolcache/Python/3.12.13/x64/lib/python3.12/site-packages/_pytest/pathlib.py:596: in import_path
    importlib.import_module(module_name)
/opt/hostedtoolcache/Python/3.12.13/x64/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
/opt/hostedtoolcache/Python/3.12.13/x64/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:179: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/opt/hostedtoolcache/Python/3.12.13/x64/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:348: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/opt/hostedtoolcache/Python/3.12.13/x64/lib/python3.12/ast.py:52: in parse
    return compile(source, filename, mode, flags,
E     File "/home/runner/work/ETHUSDC_BotV3_Hermes/ETHUSDC_BotV3_Hermes/tests/unit/test_protocol_v3_pipeline_final_report.py", line 194
E       malformed = report.canonical_json[:-1] + ',"report_id":"duplicate"}
E                                                ^
E   SyntaxError: unterminated string literal (detected at line 194)
=========================== short test summary info ============================
ERROR tests/unit/test_protocol_v3_pipeline_final_report.py
!!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
--- compile tail ---
--- whitespace tail ---
